--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: production
-      url: https://pizza.byucsstudent.click
+      url: https://pizza.pizza4dagoats.click
     env:
       version: ${{needs.build.outputs.version}}
     steps:
