--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     environment:
-      name: production
-      url: https://pizza.pizza4dagoats.click
+      name: staging
+      url: https://stage-pizza.pizza4dagoats.click
     env:
       version: ${{needs.build.outputs.version}}
     steps:
